# assume-role

./: Cargo.toml  README.md
src/: main.rs
