[package]
name = "assume-role"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
aws-config = "0.51.0"
aws-sdk-iam = "0.21.0"
aws-sdk-sts = "0.21.0"
chrono = "0.4.23"
clap = { version = "4.0.24", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
