[package]
name = "assume-role"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
aws-config = "1.1.1"
aws-sdk-iam = "1.9.1"
aws-sdk-sts = "1.9.0"
aws-smithy-types = "1.1.1"
chrono = { version = "0.4.30", default-features = false, features = ["std", "clock"] }
clap = { version = "4.4.2", features = ["derive"] }
serde_json = "1.0.106"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
