[package]
name = "assume-role"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
aws-config = "1.6.3"
aws-sdk-iam = "1.72.0"
aws-sdk-sts = "1.69.0"
aws-smithy-types = "1.3.1"
chrono = { version = "0.4.41", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5.38", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.33"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
